[package]
name = "tea-orm"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "Helper functions for Sea Orm to help with testing"
keywords = ["database", "testing", "test", "sea-orm", "sea_orm"]
categories = ["database", "development-tools::testing"]
authors = ["josephlenton@gmail.com <josephlenton@gmail.com>"]
repository = "https://github.com/JosephLenton/tea-orm"
readme = "README.md"
documentation = "https://docs.rs/tea-orm/latest/tea-orm"

[features]
default = ["runtime-tokio-rustls"]

runtime-actix-native-tls = ["sea-orm/runtime-actix-native-tls"]
runtime-actix-rustls = ["sea-orm/runtime-actix-rustls"]
runtime-async-std-native-tls = ["sea-orm/runtime-async-std-native-tls"]
runtime-async-std-rustls = ["sea-orm/runtime-async-std-rustls"]
runtime-tokio-native-tls = ["sea-orm/runtime-tokio-native-tls"]
runtime-tokio-rustls = ["sea-orm/runtime-tokio-rustls"]

[dependencies]
anyhow = "^1.0.65"
log = { version = "^0.4.17", features = ["serde"] }
names = "0.14.0"
sea-orm = { version = "0.10.4", features = ["debug-print", "sqlx-postgres"] }
serde = { version = "^1.0.145", features = ["derive"] }

[dev-dependencies]
tokio = { version = "^1.22.0", features = ["macros"] }
